--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 div.header {
     background-color: black;
     height: 100px;
+    text-align: center;
 }
 body {
     background-color: rgb(39,39,39);
