--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
-div.header {
-    background-color: black;
-    height: 100px;
-    text-align: center;
-}
-body {
+
+* {
     background-color: rgb(39,39,39);
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-h1.title {
-    color: azure;
+
+li, a, button {
     font-family: 'Open Sans', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: azure;
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
 }
