--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ li, a, button {
 
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
 }
@@ -28,6 +27,7 @@ header {
 
 .nav_links {
     list-style: none;
+    margin-right: auto;
 }
 
 .nav_links li {
